# opus-note

./: .gitignore  README.md  __init__.py  mkdocs.yml  pyproject.toml
docs/: .pages
docs/0Software/: .pages  index.md
docs/0Software/0software/: A.md  index.md  index.toml
docs/0Software/1Linux/: A.md  AA.md  D.md  F.md  K.md  index.md  index.toml
docs/0Software/2WSL/: D.md  index.md  index.toml
docs/0Software/3Win10/: D.md  index.md
docs/0Software/4Win11/: index.md
docs/0Software/5Git/: E.md  F.md  G.md  index.md  index.toml
docs/0Software/6macOS/: index.md
docs/1Python/: .pages  index.md
docs/2C&C++/: .pages  index.md  index.toml
docs/3Rust/: .pages  index.md  index.toml
docs/4HTML/: .pages  index.md
docs/5ML/: .pages  index.md  index.toml
docs/6SignalP/: .pages  index.md
docs/7MyScripts/: index.md  index.toml
docs/javascripts/: after.min.js
docs/stylesheets/: comments.css  comments.min.css  fonts.min.css  image.css  image.min.css
docs/🍏 C&C++/: index.md  index.toml
docs/🍐 Rust/: index.md
docs/🍒 信号处理/: index.md  info.toml
docs/🎀 软件及配置/: .pages  index.md  index.toml
docs/🎈 前端/: index.md
docs/🏅 我的脚本/: index.md
docs/🐦 Python/: index.md  index.toml
docs/👺 机器学习/: index.md
overrides/partials/: comments.html  content.html  social.html
scripts/: AutoBuild.py  AutoIndex.py  AutoIndexBack.py
scripts/Fonts/: sc_unicode.txt
scripts/back/: auto_build.py  auto_index.py
scripts/ccc/: ccc.py
site/: 404.html  index.html  sitemap.xml
site/0Software/: index.html  index.toml
site/1Python/: index.html  index.toml
site/2C&C++/: index.html
site/3Rust/: index.html
site/4HTML/: index.html  index.toml
site/5ML/: index.html
site/6SignalP/: index.html  index.toml
site/7MyScripts/: index.html
site/blog/: index.html
site/javascripts/: mathjax.min.js
site/search/: search_index.json
site/stylesheets/: extra.css
site/🍏 C&C++/: index.html
site/🍐 Rust/: index.html  index.toml
site/🍒 信号处理/: index.html  index.toml
site/🎀 软件及配置/: index.html  index.toml
site/🎈 前端/: index.html  index.toml
site/🏅 我的脚本/: index.html  index.toml
site/🐦 Python/: index.html  index.toml
site/👺 机器学习/: index.html  index.toml  info.toml
src/mycv/: mkdocs.yml
src/mynote/: mkdocs.yml
src/opus_note/: mkdocs.yml
src/test/: emojis.txt  kmeans.csv  test.py  test2.py
(+2671 files in other folders)
