[project]
name = "opus-note"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fonttools>=4.53.1",
    "mkdocs-material>=9.5.34",
    "mkdocs-glightbox>=0.4.0",
    "neoteroi-mkdocs>=1.1.0",
    "mkdocs-jupyter>=0.24.8",
    "tqdm>=4.66.4",
    "pillow>=10.4.0",
    "scikit-learn>=1.5.1",
    "pandas>=2.2.2",
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
    "jupyterlab>=4.2.4",
    "cleanlab[all]>=2.6.6",
    "ngboost>=0.5.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "catboost>=1.2.5",
    "regex>=2024.7.24",
    "toml>=0.10.2",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/opus_note"]
